--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- Header / Navegación -->
 <header class="header">
     <div class="container">
-        <div class="logo">Reestructura</div>
+        <div class="logo">RTM - Comercial</div>
         <div class="nav-toggle">☰</div>
         <nav class="nav">
             <ul>
@@ -39,36 +39,81 @@
 
     <div class="hero-content">
         <div class="container">
-            <h1>Proyecto de Reestructura</h1>
-            <p>Transformando la eficiencia operativa a través de territorios optimizados.</p>
+            <h1>Reestructura Macro-Cluster</h1>
+            <p>Proyecto aplicado en la Unidad Operativa de Mega Morelia</p>
             <a href="#contexto" class="btn">Conoce más</a>
         </div>
     </div>
 </section>
 
 <!-- Contexto -->
-<section id="contexto" class="section">
-    <div class="container">
-        <h2>Contexto</h2>
-        <p>Aquí se describe el porqué del proyecto, qué se busca mejorar y los antecedentes.</p>
+<section id="contexto" class="section" style="background-color: rgb(218,218,218)" ;>
+    <div class="container contexto-flex">
+        <div class="contexto-texto">
+            <h2>Mega Morelia | MR0068 MJCQ</h2>
+            <p style="text-align: justify;">
+                Unidad Operativa de Mega Morelia, ubicada en la Ciudad de Morelia, Michoacán.
+                <br><br>
+                Se cuenta con un total de 50 rutas de Preventa y 7 Farmer Comerciales. En reparto
+                cuentan con 40 rutas de esquema tradicional y 3 mini rutas. Además un territorio
+                atendido por Distribudor Autorizado (DA) con 1 ruta RQU511 y temporal RQU311.
+                <br><br>
+                El territorio abarca desde Lomas de la Maestranza por el <strong>Este</strong>, Atecuaro en el <strong>Sur</strong>,
+                Querendaro en el <strong>Oeste</strong>, y hasta San Agustín del Maíz en el <strong>Norte</strong>.
+            </p>
+        </div>
+        <div class="contexto-imagen">
+            <img src="assets/image/terreno.png" alt="Mapa 3D del territorio">
+        </div>
     </div>
 </section>
 
 <!-- Etapas -->
-<section id="etapas" class="section">
-    <div class="container">
-        <h2>Etapas del Proyecto</h2>
-        <div class="timeline">
-            <!-- Aquí colocarás bloques por etapa -->
-            <div class="timeline-item">
-                <h3>Diagnóstico</h3>
-                <p>Se analizó la operación actual para detectar oportunidades de mejora.</p>
+<section id="etapas" class="section"">
+    <div class="container etapas-flex">
+        <div class="etapas-imagen">
+            <img src="assets/image/fondo_morelia.png" alt="Fondo de la etapa del proyecto">
+        </div>
+        <div class="etapas-texto">
+            <h2>Etapas del Proyecto</h2>
+            <div class="carousel">
+                <div class="carousel-inner">
+                    <div class="timeline-item active">
+                        <h3>Análisis de Situación Actual</h3>
+                        <p>Se analizó la operación actual para detectar oportunidades de mejora.</p>
+                    </div>
+                    <div class="timeline-item">
+                        <h3>Diseño de Macro-Cluster</h3>
+                        <p>Se propusieron esquemas de cobertura más eficientes por figura comercial.</p>
+                    </div>
+                    <div class="timeline-item">
+                        <h3>Diseño de Rutas Reparto</h3>
+                        <p>Se propusieron esquemas de cobertura más eficientes por figura comercial.</p>
+                    </div>
+                    <div class="timeline-item">
+                        <h3>Diseño de Rutas Preventa</h3>
+                        <p>Se propusieron esquemas de cobertura más eficientes por figura comercial.</p>
+                    </div>
+                    <div class="timeline-item">
+                        <h3>Simulaciones de Ruteo</h3>
+                        <p>Se propusieron esquemas de cobertura más eficientes por figura comercial.</p>
+                    </div>
+                    <div class="timeline-item">
+                        <h3>Preparativo de Higiénicos</h3>
+                        <p>Se propusieron esquemas de cobertura más eficientes por figura comercial.</p>
+                    </div>
+                    <div class="timeline-item">
+                        <h3>Go Live</h3>
+                        <p>Se propusieron esquemas de cobertura más eficientes por figura comercial.</p>
+                    </div>
+                </div>
+
+                <div class="carousel-controls">
+                    <button id="prevBtn">&#10094;</button>
+                    <button id="nextBtn">&#10095;</button>
+                    <div class="carousel-indicators" id="carouselIndicators"></div>
+                </div>
             </div>
-            <div class="timeline-item">
-                <h3>Diseño de rutas</h3>
-                <p>Se propusieron esquemas de cobertura más eficientes por figura comercial.</p>
-            </div>
-            <!-- Agrega más etapas aquí -->
         </div>
     </div>
 </section>
@@ -111,7 +156,7 @@
 <!-- Footer -->
 <footer class="footer">
     <div class="container">
-        <p>&copy; 2025 Ian Oviedo – Coca-Cola FEMSA</p>
+        <p>&copy; 2025 Ian Oviedo Berber – Coca-Cola FEMSA</p>
     </div>
 </footer>
 
