--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Meta para iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Compendio RTM">
+    <link rel="apple-touch-icon" href="assets/icon/icon192.png">
+
+    <!-- Meta general para manifest -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="manifest" href="manifest.json">
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,7 +81,7 @@
 </section>
 
 <!-- Etapas -->
-<section id="etapas" class="section"">
+<section id="etapas" class="section">
     <div class="container etapas-flex">
         <div class="etapas-imagen">
             <img src="assets/image/fondo_morelia.png" alt="Fondo de la etapa del proyecto">
