--- a/index.html
+++ b/index.html
@@ -25,19 +25,21 @@
 
 <!-- Header / Navegación -->
 <header class="header">
-    <div class="container">
-        <div class="logo">RTM - Comercial</div>
-        <div class="nav-toggle">☰</div>
-        <nav class="nav">
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#contexto">Contexto</a></li>
-                <li><a href="#etapas">Etapas</a></li>
-                <li><a href="#mapas">Mapas</a></li>
-                <li><a href="#resultados">Resultados</a></li>
-                <li><a href="#equipo">Equipo</a></li>
-            </ul>
-        </nav>
+    <div class="safe-area-wrapper">
+        <div class="container">
+            <div class="logo">RTM - Comercial</div>
+            <div class="nav-toggle">☰</div>
+            <nav class="nav">
+                <ul>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#contexto">Contexto</a></li>
+                    <li><a href="#etapas">Etapas</a></li>
+                    <li><a href="#mapas">Mapas</a></li>
+                    <li><a href="#resultados">Resultados</a></li>
+                    <li><a href="#equipo">Equipo</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </header>
 
