--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </section>
 
 <!-- Contexto -->
-<section id="contexto" class="section" style="background-color: rgb(218,218,218)" ;>
+<section id="contexto" class="section" style="background-color: rgb(218,218,218)">
     <div class="container contexto-flex">
         <div class="contexto-texto">
             <h2>Mega Morelia | MR0068 MJCQ</h2>
@@ -133,8 +133,8 @@
 </section>
 
 <!-- Mapas -->
-<section id="mapas" class="section">
-    <div class="container">
+<section id="mapas" class="section mapas-bg">
+    <div class="container mapas-content">
         <h2>Mapas y Territorios</h2>
         <p>Comparativo visual antes vs después, o mapas interactivos.</p>
         <!-- Puedes incrustar un iframe de Google Maps, o usar imagen -->
@@ -160,7 +160,7 @@
 </section>
 
 <!-- Equipo -->
-<section id="equipo" class="section">
+<section id="equipo" class="section" style="background-color: rgb(218,218,218)">
     <div class="container">
         <h2>Participación del Equipo</h2>
         <p>Fotos, frases, roles clave y testimonios.</p>
