--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 <header class="header">
     <div class="safe-area-wrapper">
         <div class="container">
-            <div class="logo">RTM - Comercial</div>
+            <div class="logo">
+                <img src="assets/image/logo.png" alt="Logo">
+                <span>RTM</span>
+            </div>
             <div class="nav-toggle">☰</div>
             <nav class="nav">
                 <ul>
