--- a/index.html
+++ b/index.html
@@ -137,10 +137,25 @@
 
 <!-- Mapas -->
 <section id="mapas" class="section mapas-bg">
+    <div class="mapas-overlay"></div>
+
     <div class="container mapas-content">
         <h2>Mapas y Territorios</h2>
         <p>Comparativo visual antes vs después, o mapas interactivos.</p>
-        <!-- Puedes incrustar un iframe de Google Maps, o usar imagen -->
+    </div>
+
+    <div class="container mapas-contenedor">
+        <div class="mapas-botones">
+            <button onclick="mostrarMapa(0)">Reparto</button>
+            <button onclick="mostrarMapa(1)">Preventa</button>
+            <button onclick="mostrarMapa(2)">Distribuidor A.</button>
+        </div>
+
+        <div class="mapas-visor">
+            <iframe class="mapas" src="https://www.google.com/maps/d/embed?mid=1dFjgVkkZEBrVKvOyV805imXO4HIxftI&noprof=1" width="100%" height="500"></iframe>
+            <iframe class="mapas" src="https://www.google.com/maps/d/embed?mid=1iYgjCLYPLS0DXt5FoQiw-SGrGgciIbA&usp=sharing&noprof=1" width="100%" height="500" style="display: none;"></iframe>
+            <iframe class="mapas" src="https://www.google.com/maps/d/embed?mid=1ZzgkeqMhFaPHWU4kkvv8VM1b5kebUKc&usp=sharing&noprof=1" width="100%" height="500" style="display: none;"></iframe>
+        </div>
     </div>
 </section>
 
@@ -180,6 +195,20 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="js/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/smooth-scroll@16.1.3/dist/smooth-scroll.polyfills.min.js"></script>
+<script>
+    function mostrarMapa(index) {
+        const iframes = document.querySelectorAll('.mapas');
+        const botones = document.querySelectorAll('.mapas-botones button');
+
+        iframes.forEach((iframe, i) => {
+            iframe.style.display = i === index ? 'block' : 'none';
+        });
+
+        botones.forEach((btn, i) => {
+            btn.classList.toggle('active', i === index);
+        });
+    }
+</script>
 
 </body>
 </html>
